fixed compilation issues